src/objects/P7S1_Rollup__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildCalculationField__c</fullName>
        <label>Child Calculation Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChildObject__c</fullName>
        <label>ChildObject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BatchFilter__c</fullName>
        <label>Batch Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_BatchResult__c</fullName>
        <label>Batch Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObject__c</fullName>
        <label>Parent Object</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentResultField__c</fullName>
        <label>Parent Result Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelationshipField__c</fullName>
        <description>Field on the child object which is referencing to the parent</description>
        <label>Relationship Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Count</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WhereCondition__c</fullName>
        <label>WHERE-Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rollup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Beschreibung__c</columns>
        <columns>P7S1_BatchResult__c</columns>
        <columns>ParentObject__c</columns>
        <columns>ParentResultField__c</columns>
        <columns>ChildObject__c</columns>
        <columns>ChildCalculationField__c</columns>
        <columns>Type__c</columns>
        <columns>RelationshipField__c</columns>
        <columns>WhereCondition__c</columns>
        <columns>P7S1_BatchFilter__c</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Automtic</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Beschreibung__c</columns>
        <columns>P7S1_BatchResult__c</columns>
        <columns>ParentObject__c</columns>
        <columns>ParentResultField__c</columns>
        <columns>ChildObject__c</columns>
        <columns>ChildCalculationField__c</columns>
        <columns>Type__c</columns>
        <columns>RelationshipField__c</columns>
        <columns>WhereCondition__c</columns>
        <columns>P7S1_BatchFilter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Automatische (Aktiv)</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Forecast</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Beschreibung__c</columns>
        <columns>P7S1_BatchResult__c</columns>
        <columns>ParentObject__c</columns>
        <columns>ParentResultField__c</columns>
        <columns>ChildObject__c</columns>
        <columns>ChildCalculationField__c</columns>
        <columns>Type__c</columns>
        <columns>RelationshipField__c</columns>
        <columns>WhereCondition__c</columns>
        <columns>P7S1_BatchFilter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Beschreibung__c</field>
            <operation>startsWith</operation>
            <value>Forecast</value>
        </filters>
        <label>Forecast</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Manual</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Beschreibung__c</columns>
        <columns>P7S1_BatchResult__c</columns>
        <columns>ParentObject__c</columns>
        <columns>ParentResultField__c</columns>
        <columns>ChildObject__c</columns>
        <columns>ChildCalculationField__c</columns>
        <columns>Type__c</columns>
        <columns>RelationshipField__c</columns>
        <columns>WhereCondition__c</columns>
        <columns>P7S1_BatchFilter__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Manuell (Inaktiv)</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Rollup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rollup</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>